# CRUD_farmacia

./: .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/api/v1/endpoints/: products.py
app/core/: security.py
app/db/: init_db.py  session.py
app/db/models/: product.py
app/schemas/: product.py
tests/: test_products.py
